# GenericAgent

./: .gitignore  README.md  README_LOCAL.md  agent_loop.py  agentmain.py  ga.py  llmcore.py  mykey_template.py  pyproject.toml
assets/: sys_prompt.txt  sys_prompt_en.txt
frontends/: tgapp.py  wechatapp.py
memory/: subagent.md
scripts/: restart-bots.sh  start-bots.sh  status-bots.sh  stop-bots.sh
